deep linking implemented on the backend side
